--- a/install.css
+++ b/install.css
@@ -81,14 +81,14 @@ body {
     font-weight: bold;
     color: black;
     margin-bottom: 20px;
-    animation: slideDown 1s ease-out forwards; /* Animation pour le titre */
+    animation: slideDown 1s ease-out forwards;
     opacity: 0;
 }
 
 .subtitle {
     font-size: 1.5rem;
     margin-bottom: 40px;
-    animation: fadeIn 1s ease-out 0.5s forwards; /* Animation pour le sous-titre */
+    animation: fadeIn 1s ease-out 0.5s forwards;
     opacity: 0;
 }
 
@@ -103,7 +103,7 @@ body {
 
 .install-buttons .btn {
     animation: slideUp 0.6s ease-out forwards;
-    opacity: 0; /* Définir l'opacité à 0 au départ */
+    opacity: 0;
     background-color: var(--primary-color);
     color: white;
     text-decoration: none;
@@ -133,27 +133,27 @@ body {
 /* INSTALLATION INSTRUCTIONS */
 .install-instructions {
     padding: 40px 5%;
-    margin-top: 200px; /* Augmenter l'espacement pour placer la section plus bas */
-    box-shadow: none; /* Retirer l'ombre portée */
-    text-align: center; /* Centrer le texte */
+    margin-top: 200px;
+    box-shadow: none;
+    text-align: center;
 }
 
 .install-instructions h2 {
     font-size: 2.5rem;
     margin-bottom: 20px;
-    font-weight: normal; /* Rendre le titre moins "lourd" */
+    font-weight: normal;
 }
 
 .instruction-item {
     display: flex;
     align-items: center;
     gap: 15px;
-    background-color: transparent; /* Retirer le fond gris */
+    background-color: transparent;
     padding: 15px;
-    border-radius: 0; /* Retirer les bords arrondis */
+    border-radius: 0;
     margin-top: 15px;
-    box-shadow: none; /* Retirer l'ombre portée */
-    text-align: left; /* Garde le texte aligné à gauche */
+    box-shadow: none;
+    text-align: left;
 }
 
 .instruction-item i {
@@ -164,7 +164,7 @@ body {
 .instruction-item h3 {
     font-size: 1.5rem;
     margin: 0;
-    font-weight: normal; /* Rendre le texte plus léger */
+    font-weight: normal;
 }
 
 /* FOOTER */
