--- a/install.css
+++ b/install.css
@@ -114,6 +114,14 @@ body {
     width: 250px;
 }
 
+.btn.disabled {
+    background-color: #ccc;
+    color: #666;
+    cursor: not-allowed;
+    pointer-events: none;
+    opacity: 0;
+}
+
 .install-buttons .btn:nth-child(1) {
     animation-delay: 0.3s;
 }
